# whisper-type

./: .gitignore  README.md  pyproject.toml  requirements.txt
doc/: codex-change-log.md
docs/: requirements.md
models/: README.md
tests/: conftest.py  test_config.py  test_controller.py  test_cues.py  test_recognizer.py  test_state.py  test_textdiff.py  test_typist.py
whispertype/: __init__.py  __main__.py  app.py  audio.py  autostart.py  config.py  controller.py  cues.py  engine.py  hotkey.py  recognizer.py  state.py  textdiff.py  typist.py
whispertype/gui/: __init__.py  main_window.py  settings_dialog.py  tray.py
