[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "whispertype"
version = "1.0.0"
description = "Windows 向け AI リアルタイム音声入力アプリ（ローカル whisper.cpp 使用）"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "PySide6>=6.6",
    "sounddevice>=0.4.6",
    "pynput>=1.7.6",
    "keyboard>=0.13.5",
    "numpy>=1.26",
    "pywhispercpp>=1.2",
]

[project.gui-scripts]
whispertype = "whispertype.app:main"

[tool.setuptools.packages.find]
include = ["whispertype*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
